# sysadmin-agents

./: .containerignore  .dockerignore  .gitignore  Containerfile  LICENSE  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_request.md  bug_report.md  feature_request.md
.github/workflows/: build-image.yaml  ci.yaml
agents/: __init__.py
agents/capacity/: __init__.py  agent.py  root_agent.yaml
agents/performance/: __init__.py  agent.py  root_agent.yaml
agents/rca/: __init__.py  agent.py  root_agent.yaml
agents/security/: __init__.py  agent.py  root_agent.yaml
agents/sysadmin/: __init__.py  agent.py  root_agent.yaml
agents/upgrade/: __init__.py  agent.py  root_agent.yaml
core/: __init__.py  agent_config.yaml  agent_factory.py  agent_loader.py  artifacts.py  callbacks.py  callbacks_config.yaml  config.py  events.py  logging_config.py  mcp.py  safety.py  state.py  tools.py  types.py  utils.py
deploy/: config.env.example  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  podman-kube.yaml  route.yaml  secrets.yaml.example  service.yaml
docs/: ADDING_AGENTS.md  BACKLOG.md  CONTRIBUTING.md  DEPLOYMENT.md
scripts/: deploy.sh  sync-agents.sh  test-rhel.sh  test_agent.py
tests/: __init__.py  test_agent_factory.py  test_agent_loader.py  test_agents.py  test_artifacts.py  test_callbacks.py  test_core.py  test_events.py  test_safety.py  test_state.py  test_types.py
